# personal-financial-skills

./: .env.example  .gitignore  .instructions.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  UPGRADE-PLAN.md  check_data.py  docker-compose.yml  prefect.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: company-profile.agent.md  personal-finance-assistant.agent.md
agents/: task_dispatcher.py
agents/openclaw/: CLAUDE.md  artifact-gitignore
agents/prompts/: artifact-commit.md
dashboard/: app.py
dashboard/components/: styles.py
dashboard/pages/: 1_company_profile.py  2_thesis_tracker.py  3_agent_chat.py  4_earnings_analysis.py
dashboard/utils/: __init__.py  task_client.py  thesis_io.py
deploy/: .env.example  README.md
deploy/docker/: .env.data-server  .env.data-server.example  docker-compose.data.yml
deploy/openclaw/: CLAUDE.md
deploy/postgres/: pfs-tuning.conf
deploy/scripts/: artifact-commit.sh  check-new-filings.sh  deploy.sh  setup-agent-server.sh  setup-cron.sh  setup-data-server.sh  (+2 more)
docs/: api.md  architecture.md  artifact-schema.md  migration-plan.md  prefect-local-orchestration.md  quickstart.md  user-guide.md
pfs/: __init__.py  app.py  config.py  splits.py
scripts/: clean_markdown_dollar.py  covert_smi.py  init_db.py  migrate_postgres_to_sqlite.py  seed_tasks.py  sync_to_remote.sh
skills/: PLAN.md  README.md
src/: config.py  splits.py
streamlit_app/: app.py
tests/: test_api.py  test_data_fallback.py  test_pipeline.py  test_portfolio.py  test_price_client.py  test_splits_db.py  test_xbrl_parser.py
(+217 files in other folders)
