[project]
name = "personal-financial-skills"
version = "0.1.0"
description = "Mini Bloomberg - Personal investor toolkit for equity analysis"
requires-python = ">=3.11"

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    # ETL
    "httpx>=0.27",
    "pandas>=2.2",
    # Analysis
    "numpy>=1.26",
    # Dashboard
    "streamlit>=1.40",
    "plotly>=5.24",
    # MCP
    "mcp>=1.0",
    # Config
    "python-dotenv>=1.0",
    "pydantic-settings>=2.5",
    "pydantic>=2.0",
    "yfinance>=1.2.0",
    "pypdf2>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
airflow = [
    "apache-airflow>=2.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["pfs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
